# xkcd-explorer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.demo  Dockerfile.torchserve  Makefile  README.md  Tiltfile
client/: .gitignore  Makefile  README.md  pyproject.toml
client/xkcd_explorer/: __init__.py  async_client.py  client.py  types.py
client/xkcd_explorer/pb/: xkcd_explorer_pb2.py-e  xkcd_explorer_pb2_grpc.py  xkcd_explorer_pb2_grpc.py-e
demo/: .gitignore  README.md  pyproject.toml
demo/xkcd_explorer_demo/: main.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  serviceaccount.yaml
helm/templates/deployments/: deployment-demo.yaml  deployment-server.yaml  deployment-torchserve.yaml
helm/templates/hooks/: insert-data.yaml
helm/templates/jobs/: insert-data.yaml
helm/templates/services/: svc-server.yaml  svc-torchserve.yaml
proto/: xkcd_explorer.proto
server/: Cargo.toml  Makefile  README.md  build.rs
server/src/: database.rs  lib.rs  main.rs  record.rs  service.rs
server/src/pb/: mod.rs  xkcd_explorer.v1.rs
server/torchserve/: Cargo.toml  build.rs
server/torchserve/src/: lib.rs
server/torchserve/src/pb/: mod.rs  org.pytorch.serve.grpc.inference.rs
torchserve/: .gitignore  Makefile  README.md  download.py  infer.py  requirements.txt
