[tool.poetry]
name = "xkcd-explorer-demo"
version = "0.1.0"
description = "XKCD Explorer Gradio demo"
authors = ["odehaene <olivier.dehaene@gmail.com>"]

[tool.poetry.scripts]
xkcd-explorer-demo = 'main:app'

[tool.poetry.dependencies]
python = "^3.7"
gradio = "^3.0.15"
xkcd-explorer = { path = "../client/" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
